# workshop_data_quality

./: README.md  pyproject.toml
.github/workflows/: CI.yaml
app/: funcao.py
docs/: index.md
exemplo/: exemplo0.py
tests/: test_funcao.py
